[package]
name = "ssb-tfk"
version = "0.1.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "AGPL-3.0"
edition = "2018"
description = "TypeFormatKey binary encoding of Secure Scuttlebutt Key types"
repository = "https://github.com/pietgeursen/ssb-tfk-rs"
documentation = "https://docs.rs/ssb-tfk/"
keywords = ["ssb", "scuttlebutt"]

[features]
default = []
multiformats = ["ssb-multiformats"]

[dependencies]
snafu = "0.6.9"
ssb-multiformats = { version = "0.3.0", optional = true }
